--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -22,4 +22,7 @@
         <param name="ios-package" value="CDVCapture" />
     </feature>
     <access origin="*" />
+    <feature name="Device">
+        <param name="android-package" value="org.apache.cordova.device.Device" />
+    </feature>
 </widget>
