updated Dev Nav / Starting Functions

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -221,9 +221,11 @@ h1 {
 }
 
 /* 3 3 3 3 * * * * * * * * * * * * * LISTEN SCREEN * * * * * * * * * * * * * * * * */
-#recording-button {
+#stop-recording-button {
   display: block;
-  padding-top: 45vh;
+  padding-top: 40vh;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* 4 4 4 4 * * * * * * * * * * * * * LISTEN SCREEN * * * * * * * * * * * * * * * * */
