--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -34,11 +34,16 @@ body {
 
 /* 2 2 2 2 * * * * * * * * * * * * * MAIN SCREEN * * * * * * * * * * * * * * * * */
 #play-button {
-  padding-top: 25vh;
-  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-top: 75px;
 }
 #record-buton {
-  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-top: 75px;
 }
 
 /* 3 3 3 3 * * * * * * * * * * * * * LISTEN SCREEN * * * * * * * * * * * * * * * * */
