--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -28,13 +28,13 @@ body {
 #play-button {
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 60%;
   margin-top: 75px;
 }
-#record-buton {
+#record-button {
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 60%;
   margin-top: 75px;
 }
 
@@ -56,11 +56,11 @@ body {
 }
 #stop-button {
   /* FIX */
-  border-color: #FFFFFF;
-  border-width: 40px;
+  border-color: #FFF;
+  border-width: 30px;
   border-style: solid;
-  height: 110px;
-  width: 110px;
+  height: 125px;
+  width: 125px;
   margin: auto;
   margin-top: 100%;
 }
@@ -86,7 +86,7 @@ body {
   top: 240px;
   position: absolute;
   margin: 20px;
-  width: calc(100% - 40px);
+  width: calc(100% - 60px);
   left: 10px;
 }
 
@@ -95,4 +95,25 @@ body {
   left:0px;
   position: absolute;
   border-color: white;
+}
+
+#upvotes {
+color: white;
+font-size: 38px;
+font-weight: bold;
+position: absolute;
+left: 130px;
+width: 50px;
+top: 116px;
+}
+
+#voteup {
+position: absolute;
+left: 105px;
+top: 50px;
+}
+#votedown{
+position: absolute;
+left: 105px;
+top: 180px;
 }
