--- a/www/css/index.css
+++ b/www/css/index.css
@@ -31,7 +31,7 @@ body {
   width: 60%;
   margin-top: 75px;
 }
-#record-buton {
+#record-button {
   margin-left: auto;
   margin-right: auto;
   width: 60%;
@@ -57,10 +57,10 @@ body {
 #stop-button {
   /* FIX */
   border-color: #FFF;
-  border-width: 20px;
+  border-width: 30px;
   border-style: solid;
-  height: 130px;
-  width: 130px;
+  height: 125px;
+  width: 125px;
   margin: auto;
   margin-top: 100%;
 }
@@ -86,7 +86,7 @@ body {
   top: 240px;
   position: absolute;
   margin: 20px;
-  width: calc(100% - 40px);
+  width: calc(100% - 60px);
   left: 10px;
 }
 
@@ -95,4 +95,25 @@ body {
   left:0px;
   position: absolute;
   border-color: white;
+}
+
+#upvotes {
+color: white;
+font-size: 38px;
+font-weight: bold;
+position: absolute;
+left: 110px;
+width: 50px;
+top: 116px;
+}
+
+#voteup {
+position: absolute;
+left: 110px;
+top: 50px;
+}
+#votedown{
+position: absolute;
+left: 110px;
+top: 180px;
 }
